05_Architecture_of_Multi_Service_Apps/k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          # - path: /api/users/?(.*)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port:
                  number: 3000
  ingressClassName: nginx
